[gd_scene load_steps=19 format=3 uid="uid://cehgtxrpeb1id"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_p7hqc"]
[ext_resource type="Texture2D" uid="uid://btoco4iaeuqbs" path="res://scenes/game_object/player/player.png" id="1_rjhl8"]
[ext_resource type="PackedScene" uid="uid://dty6qc15obu6g" path="res://scenes/component/health_component.tscn" id="2_16b1q"]
[ext_resource type="PackedScene" uid="uid://7bg2nfxngekx" path="res://scenes/component/velocity_component.tscn" id="2_m28kn"]
[ext_resource type="PackedScene" uid="uid://b7etjsty2q34a" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="3_0egwc"]
[ext_resource type="PackedScene" uid="uid://bsmhivc0yb4we" path="res://scenes/component/random_stream_player_2d_component.tscn" id="4_k1qsg"]
[ext_resource type="AudioStream" uid="uid://cotptex22vcy0" path="res://assets/audio/impactMining_000.ogg" id="5_ew868"]
[ext_resource type="AudioStream" uid="uid://balcw1fll7t6s" path="res://assets/audio/impactMining_001.ogg" id="6_i1er1"]
[ext_resource type="AudioStream" uid="uid://cc8sscd4pliim" path="res://assets/audio/impactMining_002.ogg" id="7_qn7e8"]
[ext_resource type="AudioStream" uid="uid://rpe8d470c2e8" path="res://assets/audio/impactMining_003.ogg" id="8_txufh"]
[ext_resource type="AudioStream" uid="uid://ci3j5cetaajcc" path="res://assets/audio/impactMining_004.ogg" id="9_i5tdj"]

[sub_resource type="Animation" id="Animation_okdce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_aftbu"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.784584, 2.6, 2.9, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.2, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hny58"]
_data = {
"RESET": SubResource("Animation_okdce"),
"walk": SubResource("Animation_aftbu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qwhw2"]
radius = 32.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jw8a"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_w2w72"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6g8b0"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_p7hqc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hny58")
}
playback_default_blend_time = 0.2

[node name="VelocityComponent" parent="." instance=ExtResource("2_m28kn")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_16b1q")]

[node name="HitRandomStreamPlayerComponent" parent="." instance=ExtResource("4_k1qsg")]
streams = Array[AudioStream]([ExtResource("5_ew868"), ExtResource("6_i1er1"), ExtResource("7_qn7e8"), ExtResource("8_txufh"), ExtResource("9_i5tdj")])

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("3_0egwc")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthRegenTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_qwhw2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rjhl8")
offset = Vector2(0, -8)

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_3jw8a")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_w2w72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_6g8b0")
